--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "files": [
     "dist"
   ],
+  "workspaces": [
+    "website",
+    "test"
+  ],
   "scripts": {
     "dev": "bunchee --watch",
     "build": "bunchee && cp src/styles.css dist/styles.css",
@@ -61,6 +65,5 @@
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0 || ^19.0.0-rc",
     "react-dom": "^18.0.0 || ^19.0.0 || ^19.0.0-rc"
-  },
-  "packageManager": "pnpm@8.12.1"
+  }
 }
